fix the overflow

--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@
   margin: 0;
   text-transform: capitalize;
   color: white;
+  overflow: hidden;
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
